--- a/css/style.scss
+++ b/css/style.scss
@@ -40,10 +40,12 @@ header {
   display: flex;
   justify-content: space-between;
   padding: 2em;
+  align-items: center;
 
   .logo {
-    color: #FCA311;
+    color: #fca311;
     font-weight: bold;
+    border-bottom: 1px solid #f7f7f7;
   }
 
   ul {
@@ -65,12 +67,12 @@ header {
   background: black;
   color: white;
   display: grid;
-  text-align: center;
+  text-align: left;
   padding: 4em;
 }
 .meet {
   display: flex;
-  margin: 0 auto;
+  margin: 0;
   width: 200px;
   font-weight: bold;
   color: #ff64cb;
@@ -100,7 +102,7 @@ section {
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    background: #E5E5E5;
+    background: #e5e5e5;
     top: 90px;
     left: 0;
     z-index: -1;
@@ -354,25 +356,24 @@ section {
   }
 }
 
-.circle {
-  animation: circleAnim 1s infinite alternate-reverse;
+.arrows {
+  animation: arrows 2s infinite;
+  position: relative;
 }
 
-@keyframes circleAnim {
+@keyframes arrows {
   from {
-    transform: translate(262px, 798px);
-    z-index: 5;
+    top: 0;
   }
   to {
-    transform: translate(262px, 830px);
-    z-index: 5;
+    top: 30px;
   }
 }
 
 .footer {
   display: grid;
   grid-template-columns: 1fr;
-  background:black;
+  background: black;
   h2 {
     color: white;
   }
